tdf#135528 tdf#135491 Fix LO crash when using macro with SI enabled

WriterInspectorTextPanel.cxx tries to work on the current shell
which might change everytime. This patch uses the original shell
stored in m_pWrtShell to get the current DocShell.

Change-Id: I243e7346b748ca81041016f526b6d4da7861f7bd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100493
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>